added name in title

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Kenjoelmuigai</title>
+  <title>AGNES POTFOLIO</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="index.css">
@@ -20,7 +20,7 @@
     </div>
     <nav class="navbar">
         <div class="max-width">
-            <div class="logo"><a href="#">Monsieur<span>.</span></a></div>
+            <div class="logo"><a href="#">Enspouse<span>.</span></a></div>
             <ul class="menu">
                 <li><a href="#home" class="menu-btn">Home</a></li>
                 <li><a href="#about" class="menu-btn">About</a></li>
@@ -53,9 +53,9 @@
                
                 </div>
                 <div class="column right">
-                    <div class="text">I'm Ken Joel Muigai a <span class="typing-2"></span></div>
+                    <div class="text">I'm Agnes Wanjikun Norman a <span class="typing-2"></span></div>
                     <p>I am an Android and Web Developer, residing in Nairobi, Kenya. I enjoy learning new things and implementing them on the exciting projects I'm working on. When not immersed in code and some chillhop music, you'll find me reading books, watching a wild documentary or jogging. Want to work together? I'd love to hear from you.</p>
-                    <a href="" download>Download CV</a>
+                    <!-- <a href="" download>Download CV</a> -->
                 </div>
             </div>
         </div>
