--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>AGNES POTFOLIO</title>
+  <title>AgnesNorman</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="index.css">
@@ -207,21 +207,21 @@
                             <i class="fas fa-user"></i>
                             <div class="info">
                                 <div class="head">Name</div>
-                                <div class="sub-title">Ken Joel Muigai</div>
+                                <div class="sub-title">Agnes Wanjiku Norman</div>
                             </div>
                         </div>
                         <div class="row">
                             <i class="fas fa-map-marker-alt"></i>
                             <div class="info">
                                 <div class="head">Address</div>
-                                <div class="sub-title">3989, Kasarani</div>
+                                <div class="sub-title">00209, Loitoktok</div>
                             </div>
                         </div>
                         <div class="row">
                             <i class="fas fa-envelope"></i>
                             <div class="info">
                                 <div class="head">Email</div>
-                                <div class="sub-title">jrjoemuigai@gmail.com</div>
+                                <div class="sub-title">shikonorman@gmail.com</div>
                             </div>
                         </div>
                     </div>
@@ -254,7 +254,7 @@
 
     <!-- footer section start -->
     <footer>
-        <span>Created By <a href="https://github.com/kenjoel">K.J.M</a> | <span class="far fa-copyright"></span> 2020 All rights reserved.</span>
+        <span>Created By <a href="https://github.com/Agneswanjiku">A.W.N</a> | <span class="far fa-copyright"></span> 2020 All rights reserved.</span>
     </footer>
 <script type="text/javascript" src="./index.js"></script>
 </body>
