added github links to div class

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                     <div class="bars">
                         <div class="info">
                             <span>Android</span>
-                            <span>70%</span>
+                            <span>80%</span>
                         </div>
                         <div class="line mysql"></div>
                     </div>
@@ -161,33 +161,33 @@
                     <div class="box">
                         <img src="./stock/she.png" alt="">
                         <div class="text">Github Website</div>
-                        <p>I was able to consume the Github Api and bring fourth a github replica where users could search for other users and get updated information.</p>
+                        <p>I was able to consume the Github Api and bring fourth a github replica where users could search for other hero and get updated information.</p>
                     </div>
-                    <a href="https://github.com/kenjoel/github-api.git">See project</a>
+                    <a href="https://github.com/Agneswanjiku/HeroFind.git">See project</a>
                 </div>
                 <div class="card">
                     <div class="box">
                         <img src="./stock/Screenshot from 2020-11-10 23-29-06.png" alt="">
-                        <div class="text">WildLife Tracker</div>
-                        <p>This application was used to help rangers Track down animal sigthings and keep records of the numbe of animals in a specific area.</p>
+                        <div class="text">PizzaIn</div>
+                        <p>This  is a website to provide customer with information about a pizza.</p>
                     </div>
-                    <a href="https://github.com/kenjoel/github-api.git">See project</a>
+                    <a href="https://github.com/Agneswanjiku/PIZZA.git">See project</a>
                 </div>
                 <div class="card">
                     <div class="box">
                         <img src="./stock/Tesla.png" alt="">
-                        <div class="text">Tesla Motors</div>
-                        <p>This website enabled users to view some of the best vehicles made by Tesla motors in the decade.</p>
+                        <div class="text">Akan</div>
+                        <p>This is a web application that takes users date of birth and calculate day of the week he or she was born.</p>
                     </div>               
-                     <a href="https://github.com/Ken-muigai/Tesla">See project</a>
+                     <a href="https://github.com/Agneswanjiku/Akan">See project</a>
                 </div>
                 <div class="card">
                     <div class="box">
                         <img src="./stock/Vsc.png" alt="">
-                        <div class="text">Virtual School Website</div>
-                        <p>This website enabled users to create virtual schools, add teacher and students and add learning Resources to enable their interaction</p>
+                        <div class="text">Hero Squad</div>
+                        <p>This website enabled users to create hero Squad, add Hero name and Hero size and add power of a certain Hero</p>
                     </div>
-                    <a href="https://github.com/kenjoel/virtualSchoolsFrontend">See project</a>
+                    <a href="https://github.com/Agneswanjiku/Hero-Squad">See project</a>
 
                 </div>
             </div>
