--- a/index.html
+++ b/index.html
@@ -1,21 +1,25 @@
 <!doctype html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>AgnesNorman</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="stylesheet" href="index.css">
-  <script src="https://kit.fontawesome.com/a076d05399.js"></script>
-  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"/>
 
-  </head>
+<head>
+    <meta charset="utf-8">
+    <title>AgnesNorman</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="stylesheet" href="index.css">
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
+    <!-- <a href="#home"><img src="stock/sunny.jpeg" alt="logo" class="logo"></a> -->
+
+</head>
+
 <body>
-      <div class="scroll-up-btn">
+    <div class="scroll-up-btn">
         <i class="fas fa-angle-up"></i>
     </div>
     <nav class="navbar">
@@ -35,26 +39,33 @@
         </div>
     </nav>
     <!--Start of home component-->
-    <section class="home" id="home">
-        <div class="max-width">
-            <div class="home-content">
-                <div class="text-2 text-white">Agnes Wanjiku Norman</div>
-                <div class="text-3 text-white"><span class="typing"></span></div>
-            </div>
-        </div>
-    </section>
+    <div class="hom">
 
-     <!-- about section start -->
-     <section class="about" id="about">
+        <section class="home" id="home">
+            <div class="max-width">
+                <div class="home-content">
+                    <div class="text-2 text-white">Agnes Wanjiku Norman</div>
+                    <div class="text-3 text-white"><span class="typing"></span></div>
+                </div>
+            </div>
+        </section>
+    </div>
+    <!-- about section start -->
+    <section class="about" id="about">
         <div class="max-width">
             <h2 class="title">About me</h2>
             <div class="about-content">
                 <div class="column left">
-               
+                    <img src="./stock/sdaa.jpg" alt="">
+
+
                 </div>
                 <div class="column right">
                     <div class="text">I'm Agnes Wanjikun Norman a <span class="typing-2"></span></div>
-                    <p>I am an Android and Web Developer, residing in Nairobi, Kenya. I enjoy learning new things and implementing them on the exciting projects I'm working on. When not immersed in code and some chillhop music, you'll find me reading books, watching a wild documentary or jogging. Want to work together? I'd love to hear from you.</p>
+                    <p>I am an Android and Web Developer, residing in Nairobi, Kenya. I enjoy learning new things and
+                        implementing them on the exciting projects I'm working on. When not immersed in code and some
+                        chillhop music, you'll find me reading books, watching a wild documentary or jogging. Want to
+                        work together? I'd love to hear from you.</p>
                     <!-- <a href="" download>Download CV</a> -->
                 </div>
             </div>
@@ -70,25 +81,28 @@
                     <div class="box">
                         <i class="fas fa-paint-brush"></i>
                         <div class="text">Web Design</div>
-                        <p>I design Web applications with strict implementation of what is on the design layout, but also versatile when need arises.</p>
+                        <p>I design Web applications with strict implementation of what is on the design layout, but
+                            also versatile when need arises.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-code"></i>
                         <div class="text">Apps Design</div>
-                        <p>I create Android applications also per desired need. I mostly use Java but I am also conversant with kotlin and can easily adjust when need arises.</p>
+                        <p>I create Android applications also per desired need. I mostly use Java but I am also
+                            conversant with kotlin and can easily adjust when need arises.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-chart-line"></i>
                         <div class="text">Advertising</div>
-                        <p>I also offer social media marketing and product launching and offer first hand marketing as per request.</p>
+                        <p>I also offer social media marketing and product launching and offer first hand marketing as
+                            per request.</p>
                     </div>
                 </div>
-               </div>
             </div>
+        </div>
         </div>
     </section>
 
@@ -99,8 +113,14 @@
             <div class="skills-content">
                 <div class="column left">
                     <div class="text">My creative skills & experiences.</div>
-                    <p>I have a bit of a diverse job history. I have held a position as a customer service representative, fronted web designer, full stack web developer working on freelance projects and currently learning Android development. I can help everywhere in the stack and I love wearing multiples hats to an extent. Although, I'm certain my strongest skills are in Software Engineering.
-                        The most of my positions utilized agile-like development using Trello, Jenkins and occasionally TFS. A day in my life consist of adding new features to my fronted projects, creating API endpoints and constantly trying to up skill myself to achieve my long term goal.</p>
+                    <p>I have a bit of a diverse job history. I have held a position as a customer service
+                        representative, fronted web designer, full stack web developer working on freelance projects and
+                        currently learning Android development. I can help everywhere in the stack and I love wearing
+                        multiples hats to an extent. Although, I'm certain my strongest skills are in Software
+                        Engineering.
+                        The most of my positions utilized agile-like development using Trello, Jenkins and occasionally
+                        TFS. A day in my life consist of adding new features to my fronted projects, creating API
+                        endpoints and constantly trying to up skill myself to achieve my long term goal.</p>
                     <a href="">Read more</a>
                 </div>
                 <div class="column right">
@@ -152,16 +172,18 @@
                 <div class="card">
                     <div class="box">
                         <img src="./stock/seeyuh.png" alt="">
-                        <div class="text"> A Social Engangegment Android App</div>
-                        <p>I employed Firebase as the storage where I was able to enable social interaction between users of the App.</p>
+                        <div class="text"> </div>
+                        <p>it allows users to send messages and receive email confirmations in receival of their
+                            messages by the company.</p>
                     </div>
-                    <a href="https://github.com/kenjoel/Letsmeet.git">See project</a>
+                    <a href="https://github.com/Agneswanjiku/Delani-Studio.git">See project</a>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="./stock/she.png" alt="">
+                        <img src="" alt="">
                         <div class="text">Github Website</div>
-                        <p>I was able to consume the Github Api and bring fourth a github replica where users could search for other hero and get updated information.</p>
+                        <p>I was able to consume the Github Api and bring fourth a github replica where users could
+                            search for other hero and get updated information.</p>
                     </div>
                     <a href="https://github.com/Agneswanjiku/HeroFind.git">See project</a>
                 </div>
@@ -169,7 +191,7 @@
                     <div class="box">
                         <img src="./stock/Screenshot from 2020-11-10 23-29-06.png" alt="">
                         <div class="text">PizzaIn</div>
-                        <p>This  is a website to provide customer with information about a pizza.</p>
+                        <p>This is a website to provide customer with information about a pizza.</p>
                     </div>
                     <a href="https://github.com/Agneswanjiku/PIZZA.git">See project</a>
                 </div>
@@ -177,15 +199,17 @@
                     <div class="box">
                         <img src="./stock/Tesla.png" alt="">
                         <div class="text">Akan</div>
-                        <p>This is a web application that takes users date of birth and calculate day of the week he or she was born.</p>
-                    </div>               
-                     <a href="https://github.com/Agneswanjiku/Akan">See project</a>
+                        <p>This is a web application that takes users date of birth and calculate day of the week he or
+                            she was born.</p>
+                    </div>
+                    <a href="https://github.com/Agneswanjiku/Akan">See project</a>
                 </div>
                 <div class="card">
                     <div class="box">
                         <img src="./stock/Vsc.png" alt="">
                         <div class="text">Hero Squad</div>
-                        <p>This website enabled users to create hero Squad, add Hero name and Hero size and add power of a certain Hero</p>
+                        <p>This website enabled users to create hero Squad, add Hero name and Hero size and add power of
+                            a certain Hero</p>
                     </div>
                     <a href="https://github.com/Agneswanjiku/Hero-Squad">See project</a>
 
@@ -254,8 +278,10 @@
 
     <!-- footer section start -->
     <footer>
-        <span>Created By <a href="https://github.com/Agneswanjiku">A.W.N</a> | <span class="far fa-copyright"></span> 2020 All rights reserved.</span>
+        <span>Created By <a href="https://github.com/Agneswanjiku">A.W.N</a> | <span class="far fa-copyright"></span>
+            2020 All rights reserved.</span>
     </footer>
-<script type="text/javascript" src="./index.js"></script>
+    <script type="text/javascript" src="./index.js"></script>
 </body>
+
 </html>
